[package]
name = "crys"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "crys"
path = "crys.rs"

[profile.release]
codegen-units = 1
lto = "fat"
